--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -3,4 +3,4 @@
 @import "base/fonts.css"
 @import "base/common.css"
 @import "base/helpers.css"
-@import "blocks/block-name.css"
+@import "blocks/block-example.css"
