--- a/src/views/layouts/layout.jade
+++ b/src/views/layouts/layout.jade
@@ -12,6 +12,7 @@ html(lang='en')
     link(rel='apple-touch-icon', href='img/favicon/apple-touch-icon.png')
     link(rel='apple-touch-icon', sizes='72x72', href='img/favicon/apple-touch-icon-72x72.png')
     link(rel='apple-touch-icon', sizes='114x114', href='img/favicon/apple-touch-icon-114x114.png')
+    link(rel='stylesheet', href='css/vendor.css')
     link(rel='stylesheet', href='css/style.css')
 
   body
