--- a/src/assets/stylesheets/style.sass
+++ b/src/assets/stylesheets/style.sass
@@ -1,6 +1,11 @@
-@import "abstracts/vars.sass"
-@import "abstracts/mixins.sass"
-@import "base/fonts.sass"
-@import "base/common.sass"
-@import "base/helpers.sass"
-@import "blocks/block-example.sass"
+@import ../vendor/normalize-css/normalize
+@import ../vendor/bourbon/app/assets/stylesheets/_bourbon
+
+@import abstracts/vars
+@import abstracts/mixins
+
+@import base/fonts
+@import base/common
+@import base/helpers
+
+@import blocks/block-example
