--- a/src/assets/stylesheets/abstracts/vars.sass
+++ b/src/assets/stylesheets/abstracts/vars.sass
@@ -1,14 +1,14 @@
-/* Fonts: */
+// Fonts:
 
 $general-font: MuseoSans-300
 
-/* Colors: */
+// Colors:
 
 $black: #000
 $white: #fff
 $small-desktop: 1199px
 
-/* Media brackpoints: */
+// Media brackpoints:
 
 $tablet: 991px
 $mobile: 767px
