--- a/src/assets/stylesheets/style.sass
+++ b/src/assets/stylesheets/style.sass
@@ -1,3 +1,5 @@
+$output-bourbon-deprecation-warnings: false
+
 @import ../vendor/normalize-css/normalize
 @import ../vendor/bourbon/app/assets/stylesheets/_bourbon
 
