[add] includePath for vendor files

--- a/src/assets/stylesheets/style.sass
+++ b/src/assets/stylesheets/style.sass
@@ -1,6 +1,6 @@
 $output-bourbon-deprecation-warnings: false
 
-@import ../vendor/bourbon/app/assets/stylesheets/_bourbon
+@import bourbon/app/assets/stylesheets/_bourbon
 
 @import abstracts/vars
 @import abstracts/mixins
