--- a/src/assets/stylesheets/style.sass
+++ b/src/assets/stylesheets/style.sass
@@ -1,5 +1,6 @@
 $output-bourbon-deprecation-warnings: false
 
+@import bootstrap-build
 @import bourbon/app/assets/stylesheets/_bourbon
 
 @import abstracts/vars
