--- a/src/views/layouts/layout.pug
+++ b/src/views/layouts/layout.pug
@@ -15,8 +15,8 @@ html(lang='en')
     link(rel='stylesheet', href='css/style.css')
 
   body
-    include ../partials/header.jade
+    include ../partials/header.pug
     block content
-    include ../partials/footer.jade
+    include ../partials/footer.pug
 
     script(src="js/scripts.js")
