--- a/src/assets/stylesheets/abstracts/mixins.sass
+++ b/src/assets/stylesheets/abstracts/mixins.sass
@@ -1,3 +1,3 @@
-=media($value)
-  @media only screen and(max-width : $value)
+=media($value, $min: false)
+  @media only screen and(if($min, min-width, max-width): $value)
     @content
