--- a/src/assets/stylesheets/style.sass
+++ b/src/assets/stylesheets/style.sass
@@ -1,5 +1,13 @@
 $output-bourbon-deprecation-warnings: false
 
+@import bootstrap/scss/functions
+@import bootstrap/scss/variables
+@import bootstrap/scss/mixins
+@import bootstrap/scss/reboot
+@import bootstrap/scss/grid
+@import bootstrap/scss/utilities/display
+@import bootstrap/scss/utilities/flex
+
 @import bourbon/app/assets/stylesheets/_bourbon
 @import family.scss/source/src/_family
 
