[refactor] custom variables

--- a/src/assets/stylesheets/abstracts/vars.sass
+++ b/src/assets/stylesheets/abstracts/vars.sass
@@ -1,14 +1,19 @@
+// Bourbon:
+
+$output-bourbon-deprecation-warnings: false
+
 // Fonts:
 
-$general-font: MuseoSans-300
+$general-font: Open Sans
 
 // Colors:
 
 $black: #000
 $white: #fff
-$small-desktop: 1199px
 
 // Media brackpoints:
 
+$desktop-small: 1199px
 $tablet: 991px
 $mobile: 767px
+$mobile-small: 575px
