--- a/src/assets/stylesheets/base/fonts.sass
+++ b/src/assets/stylesheets/base/fonts.sass
@@ -1,1 +1,3 @@
-+font-face("#{$general-font}", "fonts/#{$general-font}")
++font-face("#{$general-font}", "../fonts/#{$general-font}", ("woff2", "woff", "ttf"))
+  font-style: normal
+  font-weight: 400
