--- a/src/assets/stylesheets/style.sass
+++ b/src/assets/stylesheets/style.sass
@@ -6,7 +6,7 @@
 @import bootstrap/scss/utilities/display
 @import bootstrap/scss/utilities/flex
 
-@import bourbon/app/assets/stylesheets/_bourbon
+@import bourbon/core/_bourbon
 @import family.scss/source/src/_family
 
 @import abstracts/vars
