[add] svg fragments sprites

--- a/src/assets/stylesheets/blocks/block-example.sass
+++ b/src/assets/stylesheets/blocks/block-example.sass
@@ -39,6 +39,7 @@
     height: height('example.svg')
     background-image: resolve('example.svg')
     background-image: svg("example", "[color]: black; [stroke]: black; [fill]: black")
+    background-image: url('../img/svg-fragments.svg#ic_check_circle')
     background-size: contain
     background-repeat: no-repeat
     background-position: center
