[add] browserify for javascript handling

--- a/src/views/layouts/layout.pug
+++ b/src/views/layouts/layout.pug
@@ -19,4 +19,4 @@ html(lang='en')
     block content
     include ../partials/footer.pug
 
-    script(src="js/scripts.js")
+    script(src="js/bundle.js")
